test/ui/name-resolution/exposure/access-outside-reach.lushui
;;; @Task more cases

module grotto of
    @public
    module deeper-end of
        @(public super) data Icicle of

        @(public topmost)
        module rock-face of
            @(public topmost.grotto)
            data Ingrown-Stalactite of

use grotto.deeper-end.(self as cave, Icicle as I)
J = cave.Icicle

module mod of
    use super.cave.rock-face.Ingrown-Stalactite as St
